--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -244,6 +244,7 @@ b {
   .loader {
     position: relative;
     margin: 0 auto;
+    margin-top: 53px;
     width: 32px;
 
     &:before {
